source/blender/io/wavefront_obj/importer/obj_import_string_utils.cc
@@ -18,14 +18,12 @@ StringRef read_next_line(StringRef &buffer)
   const char *start = buffer.begin();
   const char *end = buffer.end();
   size_t len = 0;
-  char prev = 0;
   const char *ptr = start;
   while (ptr < end) {
     char c = *ptr++;
-    if (c == '\n' && prev != '\\') {
+    if (c == '\n') {
       break;
     }
-    prev = c;
     ++len;
   }
 
@@ -35,7 +33,27 @@ StringRef read_next_line(StringRef &buffer)
 
 static bool is_whitespace(char c)
 {
-  return c <= ' ' || c == '\\';
+  return c <= ' ';
+}
+
+void fixup_line_continuations(char *p, char *end)
+{
+  while (true) {
+    /* Find next backslash, if any. */
+    char *backslash = std::find(p, end, '\\');
+    if (backslash == end)
+      break;
+    /* Skip over possible whitespace right after it. */
+    p = backslash + 1;
+    while (p < end && is_whitespace(*p) && *p != '\n')
+      ++p;
+    /* If then we have a newline, turn both backslash
+     * and the newline into regular spaces. */
+    if (p < end && *p == '\n') {
+      *backslash = ' ';
+      *p = ' ';
+    }
+  }
 }
 
 const char *drop_whitespace(const char *p, const char *end)
