source/blender/io/wavefront_obj/importer/obj_import_string_utils.hh
@@ -6,9 +6,6 @@
 
 /*
  * Various text parsing utilities used by OBJ importer.
- * The utilities are not directly usable by other formats, since
- * they treat backslash (\) as a whitespace character (OBJ format
- * allows backslashes to function as a line-continuation character).
  *
  * Many of these functions take two pointers (p, end) indicating
  * which part of a string to operate on, and return a possibly
@@ -27,21 +24,22 @@ namespace blender::io::obj {
  * The returned line will not have '\n' characters at the end;
  * the `buffer` is modified to contain remaining text without
  * the input line.
- *
- * Note that backslash (\) character is treated as a line
- * continuation.
  */
 StringRef read_next_line(StringRef &buffer);
 
 /**
+ * Fix up OBJ line continuations by replacing backslash (\) and the
+ * following newline with spaces.
+ */
+void fixup_line_continuations(char *p, char *end);
+
+/**
  * Drop leading white-space from a string part.
- * Note that backslash character is considered white-space.
  */
 const char *drop_whitespace(const char *p, const char *end);
 
 /**
  * Drop leading non-white-space from a string part.
- * Note that backslash character is considered white-space.
  */
 const char *drop_non_whitespace(const char *p, const char *end);
 
